RESOLVED FIXED196029
Regression(PSON): ViewGestureController is not properly notified of process swaps on iOS
https://bugs.webkit.org/show_bug.cgi?id=196029
Summary Regression(PSON): ViewGestureController is not properly notified of process s...
Chris Dumez
Reported 2019-03-20 13:32:21 PDT
ViewGestureController is not properly notified of process swaps on iOS causing assertion failures under ViewGestureController::disconnectFromProcess(): Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x0000000102bdb6d3 WTFCrashWithInfo(int, char const*, char const*, int) + 19 (Assertions.h:566) 1 com.apple.WebKit 0x0000000102bf5587 IPC::MessageReceiverMap::removeMessageReceiver(IPC::StringReference, unsigned long long) + 163 2 com.apple.WebKit 0x0000000102dfa057 WebKit::ViewGestureController::disconnectFromProcess() + 81 (ViewGestureController.cpp:111) 3 com.apple.WebKit 0x0000000102df9e95 WebKit::ViewGestureController::~ViewGestureController() + 95 (memory:2631) 4 com.apple.WebKit 0x0000000102dfa088 WebKit::ViewGestureController::~ViewGestureController() + 14 (ViewGestureController.h:83) 5 com.apple.WebKit 0x0000000102d3bd6b -[WKWebView .cxx_destruct] + 235 (WKWebView.mm:266) 6 libobjc.A.dylib 0x00000001099da963 object_cxxDestructFromClass(objc_object*, objc_class*) + 127 7 libobjc.A.dylib 0x00000001099e64c7 objc_destructInstance + 134 8 libobjc.A.dylib 0x00000001099e64f9 object_dispose + 19 9 com.apple.UIKitCore 0x00000001137e385b -[UIResponder dealloc] + 145 10 com.apple.UIKitCore 0x0000000113c57918 -[UIView dealloc] + 1041 11 com.apple.WebKit 0x0000000102d303ab -[WKWebView dealloc] + 375 (WKWebView.mm:882)
Attachments
Patch (7.48 KB, patch)
2019-03-20 13:36 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-03-20 13:32:33 PDT
Chris Dumez
Comment 2 2019-03-20 13:33:17 PDT
Similar fix for macOS was Bug 191734.
Chris Dumez
Comment 3 2019-03-20 13:36:21 PDT
WebKit Commit Bot
Comment 4 2019-03-20 14:26:07 PDT
Comment on attachment 365391 [details] Patch Clearing flags on attachment: 365391 Committed r243240: <https://trac.webkit.org/changeset/243240>
WebKit Commit Bot
Comment 5 2019-03-20 14:26:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.